# h5calib

./: CMakeLists.txt  README.md  notes.md
src/: CMakeLists.txt  h5calib_filter.c
tests/: CMakeLists.txt  comp.py  feature_test.py  h5calib.py  perf_test.py  run_tests.sh
